k8s/infra/bird-lg-go/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird-lg-go
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 15724
        runAsGroup: 15724
        fsGroup: 15724
      containers:
        - name: bird-lg-go
          image: ghcr.io/xddxdd/bird-lg-go
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
