k8s/infra/bird-lg-go/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bird-lg-go
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
