k8s/infra/bird-lg-go/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bird-lg-go
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - lg.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: bird-lg-go
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bird-lg-go-redirect
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - lg.lama.tel
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: lg.as212024.net
            statusCode: 301
